<resources>
    <string name="app_name">ScPaperAnalysiserDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_video">Video</string>
    <string name="menu_video2">Video2</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="write_permission">亲~要先打开存储权限哟~</string>
    <string name="paper_open_flashlight">打开闪光灯</string>
    <string name="paper_close_flashlight">关闭闪光灯</string>
    <string name="paper_in_container">请将完整试纸放入镜头内</string>
    <string name="paper_manau_clip">手动裁剪</string>
    <string name="paper_clip_pic">图片裁剪</string>
    <string name="paper_reset">重试</string>
    <string name="clip_picture_zoom">放大缩小</string>
    <string name="clip_picture_rotate">旋转</string>
    <string name="paper_clip_text">温馨提示：可以通过以下操作调整图片到取景框中</string>
    <string name="try_take_photo">尝试直接拍照</string>
    <string name="intelligent_matting">智能扫描</string>
    <string name="paper_scan_notice">请务必保持试纸处在取景框内</string>
    <string name="left_margin">左边缘</string>
    <string name="right_margin">右边缘</string>
    <string name="ovulation_camera_tips"><![CDATA[为避免试纸失效，请在显色后<font color="#79FA1E">10-15分钟</font>内拍照]]></string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="paper_clip_title">排卵试纸:</string>

    <string name="smart_paper_result">智能检测结果</string>
    <string name="lh_photo">试纸照片</string>
    <string name="error_in_color_recognition">颜色识别有误差？</string>
    <string name="color_reference_bar_title_1">T线色值参考条:</string>
    <string name="color_reference_bar_title_2">T线色值参考条，拖动色卡修正结果！</string>
    <string name="lh_refer_result"><![CDATA[参考结果：<font color="#FF7486">%d</font>]]></string>
    <string name="retio_refer_result"><![CDATA[Ratio结果：<font color="#FF7486">%s</font>]]></string>
    <string name="lh_time2">检测时间</string>
    <string name="save">保存</string>
    <string name="card_strip">卡/笔型试纸</string>
    <string name="bar_strip">条形试纸</string>
    <string name="scan_paper_notice">卡/笔形试纸？</string>
    <string name="card_paper_in_container">请将试纸【完整】的显示窗口放入取景框内\nT线在左，C线在右</string>


</resources>
